# billboarding

./: CMakeLists.txt  README.md
res/shaders/: model_shader.vs.glsl  shader.fs.glsl  shader.vs.glsl  skybox_shader.fs.glsl  skybox_shader.vs.glsl  world_oriented_billboard.fs.glsl  world_oriented_billboard.vs.glsl
src/: Billboard.cpp  Billboard.h  Camera.cpp  Camera.h  Material.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Program.cpp  Program.h  Scene.cpp  Scene.h  Skybox.cpp  Skybox.h  Texture.cpp  Texture.h  WOBillboard.cpp  WOBillboard.h  Window.cpp  Window.h  main.cpp
